--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-# Ignore old API files
-app/api.ts
-app/api.tsx
-
-
 # dependencies
 /node_modules
 
@@ -21,6 +16,4 @@ pnpm-debug.log*
 
 # system files
 .DS_Store
-
-# sensitive
-token.txt
+Token.txt
