--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mysql2": "^3.14.3",
     "next": "14.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@types/node": "24.3.0",
@@ -23,6 +24,6 @@
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.7",
-    "typescript": "^5.4.0"
+    "typescript": "^5.9.2"
   }
 }
