--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.424.0",
     "mysql2": "^3.14.3",
