--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,7 @@
-# dependencies
-/node_modules
-
-# next.js build output
-/.next
-
-# local env files
+node_modules/
+.next/
+out/
 .env
 .env.local
-
-# logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# system files
+*.log
 .DS_Store
-Token.txt
